--- a/es6modules/index.html
+++ b/es6modules/index.html
@@ -11,7 +11,7 @@
     <button>Oblicz średnią</button>
 </form>
 
-<script src="./main.js"></script>
-<script src="./math.js"></script>
+<script src="./math.js" type="module"></script>
+<script src="./main.js" type="module"></script>
 </body>
 </html>
